resolved navbar and from overlapping issue

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -84,6 +84,7 @@ header {
 nav { 
 	margin:0;
 	padding: 0;
+	/* position: relative; */
 }
 
 
@@ -126,7 +127,7 @@ nav ul {
 nav ul li {
 	margin: 0px;
 	display:inline-block;
-	float: left;
+	/* float: left; */
 	}
 
 /* Styling the links */
